Housekeeping refactor